--- a/sdk/src/main/res/values/strings.xml
+++ b/sdk/src/main/res/values/strings.xml
@@ -23,9 +23,9 @@
     <string name="chat_system_two_agents_typing">%s and %s are typing...</string>
     <!-- Заголовок окна чата по умолчанию -->
     <string name="chat_title_placeholder">Report an issue</string>
-    <string name="chat.system.contact_form.introduce_in_chat">Introduce yourself in chat</string>
+    <string name="chat.system.contact_form.introduce_in_chat">Please introduce yourself in chat</string>
     <string name="chat.system.contact_form.must_fill">Please fill in your contact information to send this message</string>
-    <string name="chat.system.contact_form.status_sent">Your message is being sent over to the team. They\'ll be in touch soon.</string>
+    <string name="chat.system.contact_form.status_sent">"Your message is being sent over to the team. They\'ll be in touch soon. "</string>
     <string name="Chat.System.Media.Preparing">Preparing the file...</string>
     <string name="Chat.System.Media.Uploading">Sending the file...</string>
     <string name="Chat.System.NewMessages">New messages</string>
@@ -46,7 +46,7 @@
     <string name="contact_form.email.placeholder">Your email</string>
     <string name="contact_form.name.placeholder">Your name</string>
     <string name="contact_form.phone.placeholder">Your phone</string>
-    <string name="contact_form.status.sent">Thank You!</string>
+    <string name="contact_form.status.sent">Thank you!</string>
     <!-- Статус загрузки - ошибка -->
     <string name="download_status_error">Error</string>
     <!-- Статус загрузки - загрузка -->
