--- a/sdk/src/main/res/values-es/strings.xml
+++ b/sdk/src/main/res/values-es/strings.xml
@@ -10,6 +10,7 @@
     <string name="Camera.Access.Suggestion">Necesitamos permiso para acceder a la cámara para que pueda tomar fotos</string>
     <!-- Alert with this message displays when you try to take a photo from camera on iOS simulator or when real device experiencing some technical issues. -->
     <string name="Camera.Access.Unavailable">La cámara no está disponible</string>
+    <string name="chat_input.status.contact_info">Rellene el formulario en la parte superior</string>
     <!-- Подзаголовок окна чата по умолчанию -->
     <string name="chat_subtitle_placeholder">Chatee con nosotros 24/7</string>
     <!-- Системное сообщение в ленте чата, говорящее о том, что произошел разрыв соединения  с сервером. -->
@@ -22,6 +23,9 @@
     <string name="chat_system_two_agents_typing">%s y %s están escribiendo...</string>
     <!-- Заголовок окна чата по умолчанию -->
     <string name="chat_title_placeholder">"Reportar un problema "</string>
+    <string name="chat.system.contact_form.introduce_in_chat">Por favor, preséntese en el chat</string>
+    <string name="chat.system.contact_form.must_fill">Por favor ingrese sus datos de contacto para enviar este mensaje</string>
+    <string name="chat.system.contact_form.status_sent">Su mensaje fue enviado a nuestro equipo. Le contactaremos lo más pronto posible.</string>
     <string name="Chat.System.Media.Preparing">Preparando el archivo...</string>
     <string name="Chat.System.Media.Uploading">Enviando archivo...</string>
     <string name="Chat.System.NewMessages">Nuevos mensajes</string>
@@ -32,12 +36,17 @@
     <!-- Универсальное сообщение о неизвестной ошибке. -->
     <string name="common_unknown_error">Error desconocido</string>
     <string name="Common.Open">Abrir</string>
+    <string name="common.send">Enviar</string>
     <!-- Состояние подключения к сервису -->
     <string name="connection_state_connecting">Conectando...</string>
     <!-- Состояние отсутствия подключения -->
     <string name="connection_state_disconnected">Error de conexión, reintentar en %d segundos</string>
     <!-- Кнопка для повторного подключения к сервису, не дожидаясь таймаута  -->
     <string name="connection_state_retry">Reintentar inmediatamente</string>
+    <string name="contact_form.email.placeholder">Su correo electrónico</string>
+    <string name="contact_form.name.placeholder">Nombre</string>
+    <string name="contact_form.phone.placeholder">Su teléfono</string>
+    <string name="contact_form.status.sent">¡Gracias!</string>
     <!-- Статус загрузки - ошибка -->
     <string name="download_status_error">Error</string>
     <!-- Статус загрузки - загрузка -->
