--- a/sdk/src/main/res/values-tr/strings.xml
+++ b/sdk/src/main/res/values-tr/strings.xml
@@ -23,6 +23,8 @@
     <string name="chat_system_two_agents_typing">%s ve %s yazıyor...</string>
     <!-- Заголовок окна чата по умолчанию -->
     <string name="chat_title_placeholder">Bir sorun bildirin</string>
+    <string name="chat.state_unavailable.discription">Canlı sohbet şu anda geçici olarak kullanılamıyor. Lütfen daha sonra tekrar deneyiniz.</string>
+    <string name="chat.state_unavailable.title">Sohbet geçici olarak kullanılamıyor</string>
     <string name="chat.system.contact_form.introduce_in_chat">Sizi daha yakından tanıyabilir miyiz?</string>
     <string name="chat.system.contact_form.must_fill">Mesaj gönderebilmek için lütfen iletişim bilgilerinizi giriniz</string>
     <string name="chat.system.contact_form.status_sent">Mesajlarınız temsilcilerimize iletilecek. En kısa sürede size döneceğiz.</string>
