--- a/sdk/src/main/res/values-ru/strings.xml
+++ b/sdk/src/main/res/values-ru/strings.xml
@@ -23,6 +23,8 @@
     <string name="chat_system_two_agents_typing">%s и %s набирают сообщение...</string>
     <!-- Заголовок окна чата по умолчанию -->
     <string name="chat_title_placeholder">Чат с поддержкой</string>
+    <string name="chat.state_unavailable.discription">В настоящий момент чат недоступен. Попробуйте написать нам немного позже.</string>
+    <string name="chat.state_unavailable.title">Чат временно недоступен</string>
     <string name="chat.system.contact_form.introduce_in_chat">Представьтесь в чате</string>
     <string name="chat.system.contact_form.must_fill">Укажите ваши контакты, чтобы мы смогли ответить вам</string>
     <string name="chat.system.contact_form.status_sent">Теперь ваши сообщения не потеряются. Ответ операторов придет в чат и по указанным контактам.</string>
@@ -101,6 +103,7 @@
     <string name="Message.Edited">(изменено)</string>
     <string name="Message.Preview.Line">Диалог передан на вторую линию</string>
     <string name="Message.Sender.You">Вы</string>
+    <string name="messages.label.bot">бот</string>
     <string name="notification_channel_message_description">Сообщение из Jivo SDK</string>
     <string name="notification_channel_message_name">Jivo</string>
     <!-- Format for text message where $1 is agent name, $2 - text message -->
