--- a/sdk/src/main/res/values-es/strings.xml
+++ b/sdk/src/main/res/values-es/strings.xml
@@ -34,6 +34,7 @@
     <string name="Client.Title">Cliente #%d</string>
     <!-- Общая строка "Отмена" -->
     <string name="common_cancel">Cancelar</string>
+    <string name="common_close">Cerrar</string>
     <string name="common_done">Listo</string>
     <!-- Универсальное сообщение о неизвестной ошибке. -->
     <string name="common_unknown_error">Error desconocido</string>
@@ -103,11 +104,13 @@ Por favor vaya a [Configuración &gt; App &gt; Fotos] para dar el permiso.</stri
     <string name="Message.Edited">(editado)</string>
     <string name="Message.Preview.Line">El chat fue transferido a la segunda linea</string>
     <string name="Message.Sender.You">Usted</string>
+    <string name="messages.label.bot">bot</string>
     <string name="notification_channel_message_description">Mensaje de Jivo SDK</string>
     <string name="notification_channel_message_name">Jivo</string>
     <!-- Format for text message where $1 is agent name, $2 - text message -->
     <string name="notification_message_text_format">%1$s: %2$s</string>
     <string name="notification_message_title">Apoyo</string>
+    <string name="offline_message_placeholder">"Ups! En este momento nuestros operadores no están disponibles. Deje su mensaje aquí en el chat, le responderemos lo más pronto posible. "</string>
     <!-- Пункт "Копировать" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
     <string name="options_copy">Copiar</string>
     <!-- Пункт "Повторить отправку" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
@@ -120,6 +123,12 @@ Por favor vaya a [Configuración &gt; App &gt; Fotos] para dar el permiso.</stri
     <!-- Normally an alert with this message shouldn't be displayed but for test purposes it was added to SDK anyway -->
     <string name="PhotoLibrary.Access.Unavailable">La biblioteca de fotos no está disponible</string>
     <string name="toast_copied_to_clipboard">Copiado</string>
+    <!-- Unsupported message type bubble discription -->
+    <string name="unsupported_message_description">La versión de la aplicación está desactualizada. Detalles del mensaje:</string>
+    <!-- postfix -->
+    <string name="unsupported_message_postfix">mostrar más</string>
+    <!-- Title for unsupported message bubble  -->
+    <string name="unsupported_message_title">Tipo de mensaje no admitido</string>
     <!-- Приветственное сообщение для пустого чата -->
     <string name="welcome_message_placeholder">Contacte con nuestro equipo de soporte y díganos si hay algún bug que podamos reparar</string>
 </resources>
