--- a/sdk/src/main/res/values-ru/strings.xml
+++ b/sdk/src/main/res/values-ru/strings.xml
@@ -34,6 +34,7 @@
     <string name="Client.Title">Клиент №%d</string>
     <!-- Общая строка "Отмена" -->
     <string name="common_cancel">Отмена</string>
+    <string name="common_close">Закрыть</string>
     <string name="common_done">Готово</string>
     <!-- Универсальное сообщение о неизвестной ошибке. -->
     <string name="common_unknown_error">Техническая ошибка</string>
@@ -109,7 +110,7 @@
     <!-- Format for text message where $1 is agent name, $2 - text message -->
     <string name="notification_message_text_format">%1$s: %2$s</string>
     <string name="notification_message_title">Техподдержка</string>
-    <string name="offline_message_placeholder">Похоже операторы сейчас недоступны. Пожалуйста, оставьте своё сообщение и мы свяжемся с вами</string>
+    <string name="offline_message_placeholder">Похоже операторы сейчас недоступны. Пожалуйста, оставьте своё сообщение и мы свяжемся с вами.</string>
     <!-- Пункт "Копировать" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
     <string name="options_copy">Копировать</string>
     <!-- Пункт "Повторить отправку" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
@@ -122,6 +123,12 @@
     <!-- Normally an alert with this message shouldn't be displayed but for test purposes it was added to SDK anyway -->
     <string name="PhotoLibrary.Access.Unavailable">Библиотека фотографий недоступна</string>
     <string name="toast_copied_to_clipboard">Скопировано</string>
+    <!-- Unsupported message type bubble discription -->
+    <string name="unsupported_message_description">Версия приложения устарела. Детали сообщения: %s</string>
+    <!-- postfix -->
+    <string name="unsupported_message_postfix">подробнее \u0020</string>
+    <!-- Title for unsupported message bubble  -->
+    <string name="unsupported_message_title">Неподдерживаемый тип сообщения</string>
     <!-- Приветственное сообщение для пустого чата -->
     <string name="welcome_message_placeholder">С мобильным приложением что-то пошло не так или просто что-то непонятно? Пишите, мы поможем!</string>
 </resources>
