--- a/sdk/src/main/res/values-es/strings.xml
+++ b/sdk/src/main/res/values-es/strings.xml
@@ -113,6 +113,7 @@ Por favor vaya a [Configuración &gt; App &gt; Fotos] para dar el permiso.</stri
     <string name="offline_message_placeholder">"Ups! En este momento nuestros operadores no están disponibles. Deje su mensaje aquí en el chat, le responderemos lo más pronto posible. "</string>
     <!-- Пункт "Копировать" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
     <string name="options_copy">Copiar</string>
+    <string name="options_delete">Borrar</string>
     <!-- Пункт "Повторить отправку" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
     <string name="options_resend">Reenviar</string>
     <!--
@@ -122,11 +123,15 @@ Por favor vaya a [Configuración &gt; App &gt; Fotos] para dar el permiso.</stri
     <string name="PhotoLibrary.Access.NoAvailableImages">No hay imágenes disponibles</string>
     <!-- Normally an alert with this message shouldn't be displayed but for test purposes it was added to SDK anyway -->
     <string name="PhotoLibrary.Access.Unavailable">La biblioteca de fotos no está disponible</string>
+    <string name="rate_form.comment_title">Su comentario</string>
+    <string name="rate_form.finish_title">Gracias por su calificación</string>
+    <string name="rate_form.send">Enviar</string>
+    <string name="rate_form.title">Dejar un comentario</string>
     <string name="toast_copied_to_clipboard">Copiado</string>
     <!-- Unsupported message type bubble discription -->
-    <string name="unsupported_message_description">La versión de la aplicación está desactualizada. Detalles del mensaje:</string>
+    <string name="unsupported_message_description">La versión de la aplicación está desactualizada. Detalles del mensaje: %s</string>
     <!-- postfix -->
-    <string name="unsupported_message_postfix">mostrar más</string>
+    <string name="unsupported_message_postfix">mostrar más \u0020</string>
     <!-- Title for unsupported message bubble  -->
     <string name="unsupported_message_title">Tipo de mensaje no admitido</string>
     <!-- Приветственное сообщение для пустого чата -->
