--- a/sdk/src/main/res/values-ru/strings.xml
+++ b/sdk/src/main/res/values-ru/strings.xml
@@ -12,7 +12,7 @@
     <string name="Camera.Access.Unavailable">Камера недоступна</string>
     <string name="chat_input.status.contact_info">Пожалуйста, укажите ваши контакты</string>
     <!-- Подзаголовок окна чата по умолчанию -->
-    <string name="chat_subtitle_placeholder">На связи 24/7!</string>
+    <string name="chat_subtitle_placeholder">Всегда на связи!</string>
     <!-- Системное сообщение в ленте чата, говорящее о том, что произошел разрыв соединения  с сервером. -->
     <string name="chat_system_disconnected">Сетевая ошибка: %d,  сообщение: %s</string>
     <!-- Системное сообщение в ленте чата, говорящее о том, что в данный момент несколько агентов набирают сообщение. -->
@@ -36,6 +36,7 @@
     <string name="common_cancel">Отмена</string>
     <string name="common_close">Закрыть</string>
     <string name="common_done">Готово</string>
+    <string name="common_understand">Понятно</string>
     <!-- Универсальное сообщение о неизвестной ошибке. -->
     <string name="common_unknown_error">Техническая ошибка</string>
     <string name="Common.Open">Открыть</string>
@@ -75,7 +76,7 @@
     <!-- Надпись на кнопке контекстного меню выбора типа вложения. Нажатие на кнопку открывает системный пикер документов. -->
     <string name="media_upload_attachment_type_selecting_document">Документ</string>
     <!-- Надпись на кнопке контекстного меню выбора типа вложения. Нажатие на кнопку вызывает пикер фотогалереи. -->
-    <string name="media_upload_attachment_type_selecting_photo">Фото</string>
+    <string name="media_upload_attachment_type_selecting_photo">Галерея</string>
     <!-- Заголовок с вопросом о том, какой тип вложения пользователь хочет прикрепить к сообщению. -->
     <string name="media_upload_select_an_attachment_type_title">Что вы хотите отправить?</string>
     <!-- Системное сообщение в ленте чата, говорящее о том, что в данный момент ведётся загрузка файла на сервер. -->
@@ -103,6 +104,7 @@
     <string name="Message.Deleted">Сообщение удалено</string>
     <string name="Message.Edited">(изменено)</string>
     <string name="Message.Preview.Line">Диалог передан на вторую линию</string>
+    <string name="Message.Sender.Bot">бот</string>
     <string name="Message.Sender.You">Вы</string>
     <string name="messages.label.bot">бот</string>
     <string name="notification_channel_message_description">Сообщение из Jivo SDK</string>
@@ -113,6 +115,7 @@
     <string name="offline_message_placeholder">Похоже операторы сейчас недоступны. Пожалуйста, оставьте своё сообщение и мы свяжемся с вами.</string>
     <!-- Пункт "Копировать" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
     <string name="options_copy">Копировать</string>
+    <string name="options_delete">Удалить</string>
     <!-- Пункт "Повторить отправку" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
     <string name="options_resend">Повторить отправку</string>
     <!--
@@ -122,6 +125,12 @@
     <string name="PhotoLibrary.Access.NoAvailableImages">Нет доступных изображений</string>
     <!-- Normally an alert with this message shouldn't be displayed but for test purposes it was added to SDK anyway -->
     <string name="PhotoLibrary.Access.Unavailable">Библиотека фотографий недоступна</string>
+    <string name="rate_form.comment_title">Ваш комментарий</string>
+    <string name="rate_form.finish_title">Спасибо за оценку</string>
+    <string name="rate_form.send">Отправить</string>
+    <string name="rate_form.title">Оставьте отзыв</string>
+    <string name="status_missing_connection">Нет соединения</string>
+    <string name="suggest_check_internet_access">Проверьте, пожалуйста, доступ в Интернет</string>
     <string name="toast_copied_to_clipboard">Скопировано</string>
     <!-- Unsupported message type bubble discription -->
     <string name="unsupported_message_description">Версия приложения устарела. Детали сообщения: %s</string>
