--- a/sdk/src/main/res/values-es/strings.xml
+++ b/sdk/src/main/res/values-es/strings.xml
@@ -36,6 +36,7 @@
     <string name="common_cancel">Cancelar</string>
     <string name="common_close">Cerrar</string>
     <string name="common_done">Listo</string>
+    <string name="common_understand">¡Gracias!</string>
     <!-- Универсальное сообщение о неизвестной ошибке. -->
     <string name="common_unknown_error">Error desconocido</string>
     <string name="Common.Open">Abrir</string>
@@ -124,9 +125,14 @@ Por favor vaya a [Configuración &gt; App &gt; Fotos] para dar el permiso.</stri
     <!-- Normally an alert with this message shouldn't be displayed but for test purposes it was added to SDK anyway -->
     <string name="PhotoLibrary.Access.Unavailable">La biblioteca de fotos no está disponible</string>
     <string name="rate_form.comment_title">Su comentario</string>
+    <string name="rate_form.description">¿Qué tan satisfecho está con las respuestas del agente?</string>
+    <string name="rate_form.finish_description_bad">"Nos esforzamos para ser mejores cada día y con su opinión trabajaremos en ello. "</string>
+    <string name="rate_form.finish_description_good">Qué bueno que le haya gustado</string>
     <string name="rate_form.finish_title">Gracias por su calificación</string>
     <string name="rate_form.send">Enviar</string>
     <string name="rate_form.title">Dejar un comentario</string>
+    <string name="status_missing_connection">Sin conexión</string>
+    <string name="suggest_check_internet_access">Por favor revise su conexion a internet</string>
     <string name="toast_copied_to_clipboard">Copiado</string>
     <!-- Unsupported message type bubble discription -->
     <string name="unsupported_message_description">La versión de la aplicación está desactualizada. Detalles del mensaje: %s</string>
