--- a/sdk/src/main/res/values-tr/strings.xml
+++ b/sdk/src/main/res/values-tr/strings.xml
@@ -36,6 +36,7 @@
     <string name="common_cancel">İptal</string>
     <string name="common_close">Kapat</string>
     <string name="common_done">Tamam</string>
+    <string name="common_understand">Anladım!</string>
     <!-- Универсальное сообщение о неизвестной ошибке. -->
     <string name="common_unknown_error">Bilinmeyen hata</string>
     <string name="Common.Open">Açık</string>
@@ -103,7 +104,6 @@ Lütfen [Ayarlar &gt; App &gt; Fotoğraflar] yoluyla izin verin.</string>
     <string name="Message.Deleted">Mesaj silindi</string>
     <string name="Message.Edited">(düzenlendi)</string>
     <string name="Message.Preview.Line">Sohbet ikincil hatta aktarıldı</string>
-    <string name="Message.Sender.Bot">bot</string>
     <string name="Message.Sender.You">Ben</string>
     <string name="messages.label.bot">bot</string>
     <string name="notification_channel_message_description">Jivo SDK\'dan mesaj</string>
@@ -125,9 +125,14 @@ Lütfen [Ayarlar &gt; App &gt; Fotoğraflar] yoluyla izin verin.</string>
     <!-- Normally an alert with this message shouldn't be displayed but for test purposes it was added to SDK anyway -->
     <string name="PhotoLibrary.Access.Unavailable">Fotoğraf kitaplığı kullanılamıyor</string>
     <string name="rate_form.comment_title">Yorumunuz</string>
+    <string name="rate_form.description">Operatörün yanıtlarından ne kadar memnunsunuz?</string>
+    <string name="rate_form.finish_description_bad">Sizler için en iyi hizmeti sunmaya çalışıyoruz. Anlaşılan, üzerinde çalışmamız gereken şeyler var.</string>
+    <string name="rate_form.finish_description_good">Beğendiğinize sevindik</string>
     <string name="rate_form.finish_title">Geribildiriminiz için teşekkürler</string>
     <string name="rate_form.send">Gönder</string>
     <string name="rate_form.title">Bir yorum bırakın</string>
+    <string name="status_missing_connection">Bağlantı yok</string>
+    <string name="suggest_check_internet_access">Lütfen internet bağlantınızı kontrol edin</string>
     <string name="toast_copied_to_clipboard">Kopyalandı</string>
     <!-- Unsupported message type bubble discription -->
     <string name="unsupported_message_description">Uygulama sürümü güncel değil. Mesaj Detayları: %s</string>
