--- a/sdk/src/main/res/values/strings.xml
+++ b/sdk/src/main/res/values/strings.xml
@@ -104,7 +104,6 @@ Please go to [Settings &gt; Your App &gt; Photos] to give access.</string>
     <string name="Message.Deleted">Message was deleted</string>
     <string name="Message.Edited">(edited)</string>
     <string name="Message.Preview.Line">The chat was transferred to the second line</string>
-    <string name="Message.Sender.Bot">bot</string>
     <string name="Message.Sender.You">You</string>
     <string name="messages.label.bot">bot</string>
     <string name="notification_channel_message_description">Message from Jivo SDK</string>
@@ -126,11 +125,14 @@ Please go to [Settings &gt; Your App &gt; Photos] to give access.</string>
     <!-- Normally an alert with this message shouldn't be displayed but for test purposes it was added to SDK anyway -->
     <string name="PhotoLibrary.Access.Unavailable">Photo library is unavailable</string>
     <string name="rate_form.comment_title">Your comment</string>
-    <string name="rate_form.finish_title">Thanks for your feedback</string>
+    <string name="rate_form.description">How satisfied are you with the agent\'s answers?</string>
+    <string name="rate_form.finish_description_bad">We strive to do the best service for you. We have something to work on.</string>
+    <string name="rate_form.finish_description_good">We are glad that you liked it</string>
+    <string name="rate_form.finish_title">Thank you for your feedback!</string>
     <string name="rate_form.send">Send</string>
-    <string name="rate_form.title">Leave a review</string>
-    <string name="status_missing_connection">Missing Connection</string>
-    <string name="suggest_check_internet_access">Please check your internet access</string>
+    <string name="rate_form.title">Leave review</string>
+    <string name="status_missing_connection">No connection</string>
+    <string name="suggest_check_internet_access">Please check your Internet connection</string>
     <string name="toast_copied_to_clipboard">Copied</string>
     <!-- Unsupported message type bubble discription -->
     <string name="unsupported_message_description">The app version is outdated. Message details: %s</string>
